# sapf

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  NEXT_STEPS.md  PROMPT.md
include/: Object.hpp  SoundFiles.hpp  VM.hpp  clz.hpp  dsp.hpp  vDSP_shim.hpp
libmanta/: CMakeLists.txt
src/: CoreOps.cpp  DelayUGens.cpp  FilterUGens.cpp  MathOps.cpp  Midi.cpp  OscilUGens.cpp  Parser.cpp  Play.cpp  SoundFiles.cpp  Spectrogram.cpp  StreamOps.cpp  UGen.cpp  elapsedTime.cpp  main.cpp  makeImage.cpp
